--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>5.10</title>
+    <title>Crush</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -22,10 +22,10 @@
         </td>
     </tr>
 </table>
-<div style="position: absolute; bottom: 5px; right: 100px; padding: 5px; border: 1px solid darkred; background: #ffffff">
+<!--<div style="position: absolute; bottom: 5px; right: 100px; padding: 5px; border: 1px solid darkred; background: #ffffff">
     <a href="https://github.com/Maxislav/5.10">Скачать</a>
 
-</div>
+</div>-->
 
 </body>
 </html>
