--- a/module/addpoint/addpoint.html
+++ b/module/addpoint/addpoint.html
@@ -4,7 +4,7 @@
             <div class="close">
 
             </div>
-            Добавление ячейки
+            Добавить событие
         </div>
 
     </div>
